# sve-string-routines-benchmarks

./: .clang-format  CMakeLists.txt  README.md
include/: bench.h  driver.h  stats.h  types.h  utils.h
results/: README.md
results/csv/: memcmp.csv  strchr.csv  strcmp.csv  strcpy.csv  strlen.csv  strncmp.csv  strnlen.csv  strrchr.csv
scripts/: build.sh  merge_helper.py  plot.py  plot.sh  plot_bw.py  run.sh
src/: bench.c  driver.c  main.c  stats.c  utils.c
string-aarch64-sve/baseline/: memcpy-sve.S  strchr-sve.S  strlen-sve.S  strncmp-sve.S  strnlen-sve.S
string-aarch64-sve/new/: memchr-sve.S  memcmp-sve.S  memcpy-sve.S  strchr-sve.S  strcmp-sve.S  strcpy-sve.S  strlen-sve.S  strncmp-sve.S  strnlen-sve.S  strrchr-sve.S
string/aarch64/baseline/: memcmp-sve.S  strcmp-sve.S  strcpy-sve.S  strrchr-sve.S
string/aarch64/new/: memcmp-sve.S  memcpy-sve.S  strchr-sve.S  strcmp-sve.S  strcpy-sve.S  strlen-sve.S  strncmp-sve.S  strncpy-sve.S  strnlen-sve.S  strrchr-sve.S
